--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -18,6 +18,7 @@
     "@fluentui/react-components": "^9.35.0",
     "@fluentui/react-icons": "^2.0.220",
     "@react-spring/web": "^9.7.3",
+    "@vimeo/player": "^2.20.1",
     "dompurify": "^3.0.6",
     "js-cookie": "^3.0.5",
     "ndjson-readablestream": "^1.0.7",
@@ -33,6 +34,7 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "@types/uuid": "^9.0.7",
+    "@types/vimeo__player": "^2.18.3",
     "@vitejs/plugin-react": "^4.1.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
