--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -16,29 +16,36 @@ anyio==4.3.0
     # via
     #   httpx
     #   openai
+asgiref==3.8.1
+    # via opentelemetry-instrumentation-asgi
 async-timeout==4.0.3
     # via aiohttp
 attrs==23.2.0
     # via aiohttp
 azure-common==1.1.28
-    # via
-    #   azure-mgmt-applicationinsights
-    #   azure-search-documents
+    # via azure-search-documents
 azure-core==1.30.0
     # via
+    #   azure-core-tracing-opentelemetry
     #   azure-data-tables
     #   azure-identity
-    #   azure-mgmt-core
+    #   azure-monitor-opentelemetry
+    #   azure-monitor-opentelemetry-exporter
     #   azure-search-documents
     #   azure-storage-blob
+    #   msrest
+azure-core-tracing-opentelemetry==1.0.0b11
+    # via azure-monitor-opentelemetry
 azure-data-tables==12.5.0
     # via -r requirements.in
 azure-identity==1.15.0
     # via -r requirements.in
-azure-mgmt-applicationinsights==4.0.0
+azure-monitor-events-extension==0.1.0
     # via -r requirements.in
-azure-mgmt-core==1.4.0
-    # via azure-mgmt-applicationinsights
+azure-monitor-opentelemetry==1.3.0
+    # via -r requirements.in
+azure-monitor-opentelemetry-exporter==1.0.0b23
+    # via azure-monitor-opentelemetry
 azure-search-documents==11.4.0b6
     # via -r requirements.in
 azure-storage-blob==12.19.0
@@ -51,6 +58,7 @@ certifi==2024.2.2
     # via
     #   httpcore
     #   httpx
+    #   msrest
     #   requests
 cffi==1.16.0
     # via cryptography
@@ -67,12 +75,16 @@ cryptography==42.0.4
     #   azure-storage-blob
     #   msal
     #   pyjwt
+deprecated==1.2.14
+    # via opentelemetry-api
 distro==1.9.0
     # via openai
 exceptiongroup==1.2.0
     # via
     #   anyio
     #   taskgroup
+fixedint==0.1.6
+    # via azure-monitor-opentelemetry-exporter
 flask==3.0.2
     # via quart
 frozenlist==1.4.1
@@ -103,12 +115,16 @@ idna==3.6
     #   httpx
     #   requests
     #   yarl
+importlib-metadata==7.0.0
+    # via
+    #   opentelemetry-api
+    #   opentelemetry-instrumentation-flask
 isodate==0.6.1
     # via
     #   azure-data-tables
-    #   azure-mgmt-applicationinsights
     #   azure-search-documents
     #   azure-storage-blob
+    #   msrest
 itsdangerous==2.1.2
     # via
     #   flask
@@ -131,6 +147,8 @@ msal-extensions==1.1.0
     # via
     #   -r requirements.in
     #   azure-identity
+msrest==0.7.1
+    # via azure-monitor-opentelemetry-exporter
 multidict==6.0.5
     # via
     #   aiohttp
@@ -140,10 +158,104 @@ numpy==1.26.4
     #   openai
     #   pandas
     #   pandas-stubs
+oauthlib==3.2.2
+    # via requests-oauthlib
 openai[datalib]==1.12.0
     # via -r requirements.in
+opentelemetry-api==1.24.0
+    # via
+    #   azure-core-tracing-opentelemetry
+    #   azure-monitor-events-extension
+    #   azure-monitor-opentelemetry-exporter
+    #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-aiohttp-client
+    #   opentelemetry-instrumentation-asgi
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-django
+    #   opentelemetry-instrumentation-fastapi
+    #   opentelemetry-instrumentation-flask
+    #   opentelemetry-instrumentation-psycopg2
+    #   opentelemetry-instrumentation-requests
+    #   opentelemetry-instrumentation-urllib
+    #   opentelemetry-instrumentation-urllib3
+    #   opentelemetry-instrumentation-wsgi
+    #   opentelemetry-sdk
+opentelemetry-instrumentation==0.45b0
+    # via
+    #   opentelemetry-instrumentation-aiohttp-client
+    #   opentelemetry-instrumentation-asgi
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-django
+    #   opentelemetry-instrumentation-fastapi
+    #   opentelemetry-instrumentation-flask
+    #   opentelemetry-instrumentation-psycopg2
+    #   opentelemetry-instrumentation-requests
+    #   opentelemetry-instrumentation-urllib
+    #   opentelemetry-instrumentation-urllib3
+    #   opentelemetry-instrumentation-wsgi
+opentelemetry-instrumentation-aiohttp-client==0.45b0
+    # via -r requirements.in
+opentelemetry-instrumentation-asgi==0.45b0
+    # via
+    #   -r requirements.in
+    #   opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-dbapi==0.45b0
+    # via opentelemetry-instrumentation-psycopg2
+opentelemetry-instrumentation-django==0.45b0
+    # via azure-monitor-opentelemetry
+opentelemetry-instrumentation-fastapi==0.45b0
+    # via azure-monitor-opentelemetry
+opentelemetry-instrumentation-flask==0.45b0
+    # via azure-monitor-opentelemetry
+opentelemetry-instrumentation-psycopg2==0.45b0
+    # via azure-monitor-opentelemetry
+opentelemetry-instrumentation-requests==0.45b0
+    # via
+    #   -r requirements.in
+    #   azure-monitor-opentelemetry
+opentelemetry-instrumentation-urllib==0.45b0
+    # via azure-monitor-opentelemetry
+opentelemetry-instrumentation-urllib3==0.45b0
+    # via azure-monitor-opentelemetry
+opentelemetry-instrumentation-wsgi==0.45b0
+    # via
+    #   opentelemetry-instrumentation-django
+    #   opentelemetry-instrumentation-flask
+opentelemetry-resource-detector-azure==0.1.3
+    # via azure-monitor-opentelemetry
+opentelemetry-sdk==1.24.0
+    # via
+    #   azure-monitor-events-extension
+    #   azure-monitor-opentelemetry-exporter
+    #   opentelemetry-resource-detector-azure
+opentelemetry-semantic-conventions==0.45b0
+    # via
+    #   opentelemetry-instrumentation-aiohttp-client
+    #   opentelemetry-instrumentation-asgi
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-django
+    #   opentelemetry-instrumentation-fastapi
+    #   opentelemetry-instrumentation-flask
+    #   opentelemetry-instrumentation-requests
+    #   opentelemetry-instrumentation-urllib
+    #   opentelemetry-instrumentation-urllib3
+    #   opentelemetry-instrumentation-wsgi
+    #   opentelemetry-sdk
+opentelemetry-util-http==0.45b0
+    # via
+    #   opentelemetry-instrumentation-aiohttp-client
+    #   opentelemetry-instrumentation-asgi
+    #   opentelemetry-instrumentation-django
+    #   opentelemetry-instrumentation-fastapi
+    #   opentelemetry-instrumentation-flask
+    #   opentelemetry-instrumentation-requests
+    #   opentelemetry-instrumentation-urllib
+    #   opentelemetry-instrumentation-urllib3
+    #   opentelemetry-instrumentation-wsgi
 packaging==23.2
-    # via msal-extensions
+    # via
+    #   msal-extensions
+    #   opentelemetry-instrumentation-flask
 pandas==2.2.1
     # via openai
 pandas-stubs==2.2.0.240218
@@ -178,7 +290,11 @@ requests==2.31.0
     # via
     #   azure-core
     #   msal
+    #   msrest
+    #   requests-oauthlib
     #   tiktoken
+requests-oauthlib==2.0.0
+    # via msrest
 six==1.16.0
     # via
     #   azure-core
@@ -202,10 +318,12 @@ types-pytz==2024.1.0.20240203
 typing-extensions==4.9.0
     # via
     #   anyio
+    #   asgiref
     #   azure-core
     #   azure-data-tables
     #   azure-storage-blob
     #   openai
+    #   opentelemetry-sdk
     #   pydantic
     #   pydantic-core
     #   uvicorn
@@ -219,9 +337,21 @@ werkzeug==3.0.1
     # via
     #   flask
     #   quart
+wrapt==1.16.0
+    # via
+    #   deprecated
+    #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-aiohttp-client
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-urllib3
 wsproto==1.2.0
     # via hypercorn
 yarl==1.9.4
     # via
     #   aiohttp
     #   azure-data-tables
+zipp==3.18.1
+    # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
